refactor: Perfect Refactoring(完了)